--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -16,3 +16,5 @@ jobs:
       uses: actions/checkout@v1
     - name: Test
       run: go test ./...
+    - name: Test with -race
+      run: go test -race ./...
